# rust

./: README.md
actix_web_todo/: .gitignore  Cargo.toml  Dockerfile
actix_web_todo/src/: main.rs
actix_web_todo/src/app_errors/: errors.rs
actix_web_todo/templates/: index.html
embedded-system/: .envrc  Dockerfile  README.md
embedded-system/work/: Cargo.toml  build.rs  memory.x  runner.sh
embedded-system/work/.cargo/: config
embedded-system/work/src/: main.rs
features/app/: Cargo.toml
ffi/cffi/: Cargo.toml  build.rs
ffi/pyffi/: Cargo.toml
jupyter/: Dockerfile  README.md
my_crate/: Cargo.toml
notes/: README.md
project/: Cargo.toml
project/src/: advanced.rs  archive.rs  main  main.rs  utils.rs
project/src/advanced/: arc.rs  consts.rs  crossbeam.rs  deref.rs  experiment.rs  fix_memory_leak.rs  maybeuninit.rs  memory.rs  memory_leak.rs  pin.rs  process.rs  rc.rs  rc_refcell.rs  refcell.rs  sized.rs  test_lazy_static.rs
project/src/advanced/consts/: test_lazy_static.rs  test_once_cell.rs
project/src/advanced/crossbeam/: demo.rs  rcv_multiple_senders.rs  rcv_multiple_senders_cb.rs
project/src/advanced/memory/: bits.rs  dynamic_allocation.rs  helper.rs  memory_allocation.rs  test_ref.rs
project/src/advanced/pin/: self_ref_struct.rs  test.rs  test_move.rs  trim.rs
project/src/advanced/process/: command.rs  general.rs  pass_message.rs
project/src/advanced/test_async/: tcp_client.rs  tcp_server.rs
project/src/archive/: experiment.rs  impl_iterator.rs  multi_thread.rs  my_trait.rs  my_vec.rs  oop.rs  test_future.rs
project/src/archive/experiment/: pass_fn_asarg.rs  test_bounds.rs  test_static.rs
project/src/archive/multi_thread/: make_spawn.rs  msg_passing.rs  share_data.rs  share_memory.rs
project/src/archive/my_trait/: birds.rs  my_drop.rs
project/src/archive/oop/: demo.rs  state_pattern.rs  trait_object.rs
project/src/archive/test_future/: test_async_await.rs  test_future.rs
project/src/result/: result.rs
project/src/test_type/: any.rs
project/src/utils/: sub.rs
project/src/utils/sub/: general.rs  nested.rs
rpn/: Cargo.toml
ui_demo/: Cargo.toml  README.md
ui_demo/.cargo/: config.toml
ui_demo/.config/: config.toml
ui_demo/src/: main.rs
(+58 files in other folders)
