[package]
name = "actix_web_todo"
version = "0.1.0"
authors = ["Ryota Bannai <ryotala0528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
askama = "0.10.5"
thiserror = "1.0.23"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
rusqlite = {version = "0.24.2", features=["bundled"]}
serde = {versin = "1.0.118", features=["derive"]}
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tokio = "1.0.1"
async-std = "1.8.0"
env_logger = "0.8.2"
log = "0.4.11"
