[package]
name = "project"
version = "0.1.0"
authors = ["Ryota Bannai <ryotala0528@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.8.0"
futures = "0.3.8"
lazy_static = "1.4.0"
nix = "0.19.1"
owning_ref = "0.4.1"
pin-utils = "0.1.0"
rental = "0.5.5"
tempfile = "3.2.0"
unicode-segmentation = "1.7.1"
