[package]
name = "ui_demo"
version = "0.1.0"
authors = ["Ryota Bannai <ryotala0528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.8.0", features=["unstable"]}
iced = {version="0.2.0", features=["async-std"]}
iced_futures = "0.2.0"
iced_native = "0.3.0"
