[package]
name = "work"
version = "0.1.0"
authors = ["Ryota Bannai <ryotala0528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
stm32f4xx-hal = {version="0.8.3", features=["stm32f407"]}
